fix the modal error getting cropped in the mobile view

--- a/src/components/ui/modal/modal.module.scss
+++ b/src/components/ui/modal/modal.module.scss
@@ -3,16 +3,20 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow-y: auto;
   z-index: 200;
 
   .container {
+    margin: 10rem 0;
     max-width: 500px;
     width: 98%;
+    max-height: 90vh;
+    overflow-y: auto;
     background-color: var(--color-white);
     border-radius: var(--border-radius-md);
     padding: 1.5rem 1rem;
